--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ pip
 requests           
 setuptools         
 urllib3            
-Werkzeug           blinker==1.6.2
+Werkzeug
+blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
